# digit-rs

./: .gitignore  Cargo.toml
ase/: boppin.ase  digit-palette.ase  idle.ase  idle0.ase  idle1.ase  ready.ase  refsheet.ase  wagging.ase  walk.ase  walk2.ase  wire.ase
ase/transitions/: idle_ready.ase  wire_ready.ase
bindings/: build.rs
dengine/: Cargo.toml
dengine/src/: dwindow.rs  fsm.rs  lib.rs
dengine/src/anim/: manager.rs  mod.rs  spritesheet.rs
digit/: Cargo.toml
digit/src/: digit.rs  main.rs  services.rs  util.rs
digit/src/services/: media.rs
digit/src/states/: idle.rs  mod.rs
dserver/: Cargo.toml
dserver/src/: conn.rs  main.rs
src/: anim.rs  digit.rs  dstate.rs  fsm.rs  lib.rs  main.rs  services.rs  util.rs  window.rs
src/anim/: manager.rs  mod.rs  spritesheet.rs
src/dgtwindow/: dgtwindow.rs  dgtwindow_builder.rs  mod.rs
src/dstate/: dstate.rs  idle.rs  mod.rs  walk.rs
src/services/: media.rs
src/states/: idle.rs  walk.rs
