[package]
name = "digit"
version = "0.1.0"
authors = ["DJ"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'

[dependencies]
dengine = { path = "dengine" }
rand = "0.8.3"
bindings = { path = "bindings" }
windows = "0.18.0"
winapi = { version = "0.3.9", features = ["winuser"] }
