[package]
name = "dengine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
winit = "0.25.0"
raw-window-handle = "0.3.3"
pixels = "0.5.0"
parking_lot = "0.11.1"
winapi = { version = "0.3.9", features = ["winuser"] }
